# mslearn-azure-developer-create

./: LICENSE  README.md
dotnet/azure-app-insights/01-auto-instrument-web-app/finished/: Program.cs  deploy-blazor.sh
dotnet/azure-auth/01-msal-interactive-auth/finished/: Program.cs  finished.csproj
dotnet/azure-auth/02-microsoft-graph/finished/: Program.cs  finished.csproj
dotnet/azure-cosmos-db/01-cosmosdb-resources-sdk/: 01-cosmosdb-resources-sdk.csproj
dotnet/azure-cosmos-db/01-cosmosdb-resources-sdk/finished/: Program.cs  cosmos-resources.sh
dotnet/azure-events-messages/01-event-grid-events/: 01-event-grid-events.csproj
dotnet/azure-events-messages/01-event-grid-events/finished/: 01-event-grid-events.csproj  Program.cs  event-grid-resources.sh  resources.sh
dotnet/azure-events-messages/02-event-hubs/finished/: Program.cs  event-hubs-resources.sh  finished.csproj  resource-deployment.md  resources.sh
dotnet/azure-events-messages/02-event-hubs/starter/: .env  Program.cs
dotnet/azure-events-messages/03-service-bus/finished/: Program.cs  finished.csproj  resources.md  svc-bus-resources.sh
dotnet/azure-events-messages/03-service-bus/starter/: Program.cs
dotnet/azure-events-messages/04-queue-storage/finished/: Program.cs  azcommands.md  finished.csproj  queue-storage-resources.sh
dotnet/azure-events-messages/04-queue-storage/starter/: Program.cs
dotnet/azure-secure-solutions/01-key-vault-store-retrieve/finished/: Program.cs  (+2 more)
dotnet/azure-storage/01-blob-storage-resources-dotnet/: Program.cs  azurestorage.csproj  azurestorage.sln
dotnet/mcp-server-client/: Program.cs  mcp-server-client.csproj  mcp-server-client.sln
dotnet10/console/: .env  console.cs
python/mcp-server-client/: client.py  mcp_example.py  pyproject.toml  server.py
python/real-time-voice/: .env  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  azdeploy.sh  azure.yaml  drun.sh  pyproject.toml  requirements.txt
python/real-time-voice/infra/: ai-foundry.bicep  ai-hub.bicep  ai-project.bicep  main.bicep  openai.bicep
python/real-time-voice/old/: voice_console.py
python/real-time-voice/src/: flask_app.py
python/real-time-voice/src/real_time_voice/: flask_app.py  voice_console.py
python/real-time-voice/src/real_time_voice/templates/: index.html
python/rt-voice-console/: azdeploy.sh  pyproject.toml  requirements.txt
python/rt-voice-console/src/voice_console/: __init__.py  audio_processing.py  voice_console.py
(+13 files in other folders)
